hphp/test/zend7/Zend/tests/this_in_parse_str.php.expectf

Fatal error: %s
Stack trace:
#0 %sthis_in_parse_str.php(3): parse_str('this=42')
#1 %sthis_in_parse_str.php(6): foo()
#2 {main}
  thrown in %sthis_in_parse_str.php on line 3